examples/test/testpolicy7291.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7291
  namespace: namespace494
spec:
  podSelector:
    matchLabels:
      key13: value38
      key44: value45
      key2: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value47
          key49: value14
      podSelector:
        matchLabels:
          key3: value15
